# traductor_ia

./: AGENTS.MD  Fases.md  README.md  main.py  pyproject.toml
Informe/: InformeTecnico.md
benchmarks/: benchmark_asr.py  benchmark_base.py  benchmark_pipeline.py  benchmark_translation.py  benchmark_tts.py
samples/: README.md
src/traductor_tiempo_real/: __init__.py  benchmark_base.py  cli.py
src/traductor_tiempo_real/asr/: __init__.py  diagnostico.py  modelos.py  servicio.py  whisper_mlx.py
src/traductor_tiempo_real/audio/: __init__.py  captura.py  diagnostico.py  modelos.py
src/traductor_tiempo_real/configuracion/: __init__.py  carga.py  idiomas.py  modelos.py
src/traductor_tiempo_real/metricas/: __init__.py  estadisticas.py  eventos.py  reporte.py  tiempo.py
src/traductor_tiempo_real/pipeline/: __init__.py  bootstrap.py  modelos.py  orquestador.py
src/traductor_tiempo_real/traduccion/: __init__.py  diagnostico.py  modelos.py  ollama.py  servicio.py
src/traductor_tiempo_real/tts/: __init__.py  diagnostico.py  kokoro.py  modelos.py  reproductor.py  servicio.py
src/traductor_tiempo_real/vad/: __init__.py  segmentador.py  silero.py
tests/: test_asr_servicio.py  test_audio_buffer.py  test_audio_normalizacion.py  test_cli.py  test_configuracion.py  test_idiomas.py  test_metricas.py  test_pipeline_orquestador.py  test_segmentador.py  test_smoke.py  test_traduccion_ollama.py  test_traduccion_servicio.py  test_tts_diagnostico.py  test_tts_kokoro.py  test_tts_servicio.py  test_vad_silero.py
